--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,16 +1,52 @@
 @import "tailwindcss";
 
-/* @font-face {
-    font-family: "Roboto";
-    src: url("/fonts/Roboto-VariableFont_wdth_wght.ttf") format("truetype");
-} */
+@font-face {
+    font-family: "Avenir";
+    src: url("/fonts/avenir/Avenir-Black.otf") format("opentype");
+    font-weight: 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Avenir";
+    src: url("/fonts/avenir/Avenir-Heavy.otf") format("opentype");
+    font-weight: 800;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Avenir";
+    src: url("/fonts/avenir/Avenir-Medium.otf") format("opentype");
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Avenir";
+    src: url("/fonts/avenir/Avenir-Book.otf") format("opentype");
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Avenir";
+    src: url("/fonts/avenir/Avenir-Light.otf") format("opentype");
+    font-weight: 300;
+    font-style: normal;
+}
 
 :root {
     --background: #ffffff;
-    --muted-background: #f5f5f5;
-    --dark-background: #ececec;
+    --muted-background: #f3f4f4;
     --foreground: #000000;
-    --muted-foreground: #666666;
+    --muted-foreground: #999999;
+
+    --light-blue: #00a6db;
+    --blue: #0090bf;
+    --dark-blue: #09366d;
+    --medium-blue: #3576a7;
+    --green: #009933;
+    --red: #e15e60;
 }
 
 @theme inline {
@@ -19,8 +55,14 @@
     --color-dark-background: var(--dark-background);
     --color-foreground: var(--foreground);
     --color-muted-foreground: var(--muted-foreground);
+    --color-light-blue: var(--light-blue);
+    --color-blue: var(--blue);
+    --color-dark-blue: var(--dark-blue);
+    --color-medium-blue: var(--medium-blue);
+    --color-green: var(--green);
+    --color-red: var(--red);
 
-    --font-roboto: "Roboto", sans-serif;
+    --font-avenir: "Avenir", sans-serif;
 }
 
 @layer components {
@@ -29,21 +71,33 @@
     }
 
     .label {
-        @apply flex flex-col gap-0 capitalize;
+        @apply flex flex-col gap-1 text-sm capitalize;
     }
 
     .input {
-        @apply p-2 border border-gray-300 rounded;
+        @apply py-2.5 px-3.5 bg-white text-sm border-1 border-gray-300 rounded-xl;
     }
 
     .btn {
-        @apply px-7 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition duration-200;
+        @apply py-2.5 px-4 bg-light-blue text-white text-sm font-extrabold rounded-full hover:bg-blue transition duration-200;
+    }
+
+    .btn-secondary {
+        @apply py-1.5 px-2.5 bg-dark-blue text-white text-sm rounded-xl border-2 border-dark-blue hover:bg-white hover:text-dark-blue transition duration-200;
+    }
+
+    .link {
+        @apply text-blue hover:text-dark-blue hover:underline transition duration-200;
+    }
+
+    .search-navigation-shadow {
+        box-shadow: 0px 4px 4px 0px #00000008;
     }
 }
 
 body {
-    @apply bg-background text-foreground;
-    font-family: "Roboto", sans-serif;
+    @apply bg-muted-background text-foreground;
+    font-family: "Avenir", sans-serif;
 }
 
 input,
