Enhances lifts page with trip listing and UI improvements
Displays available trips with detailed info and improves user experience by adding loading states, trip date formatting, and visual indicators for features like ferry and electric vehicles. Refines styling for star ratings and shadows, and fixes modal closing logic in authentication forms for more intuitive behavior.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,8 +90,18 @@
         @apply text-blue hover:text-dark-blue hover:underline transition duration-200;
     }
 
-    .search-navigation-shadow {
+    .drop-shadow {
         box-shadow: 0px 4px 4px 0px #00000008;
+    }
+
+    .full-star {
+        fill: #f3cc0b;
+        stroke: none;
+    }
+
+    .half-star {
+        fill: #dfe4e7;
+        stroke: none;
     }
 }
 
