--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
     font-family: "Avenir";
     src: url("/fonts/avenir/Avenir-Black.otf") format("opentype");
     font-weight: 900;
+    font-display: swap;
     font-style: normal;
 }
 
@@ -11,6 +12,7 @@
     font-family: "Avenir";
     src: url("/fonts/avenir/Avenir-Heavy.otf") format("opentype");
     font-weight: 800;
+    font-display: swap;
     font-style: normal;
 }
 
@@ -18,6 +20,7 @@
     font-family: "Avenir";
     src: url("/fonts/avenir/Avenir-Medium.otf") format("opentype");
     font-weight: 500;
+    font-display: swap;
     font-style: normal;
 }
 
@@ -25,6 +28,7 @@
     font-family: "Avenir";
     src: url("/fonts/avenir/Avenir-Book.otf") format("opentype");
     font-weight: 400;
+    font-display: swap;
     font-style: normal;
 }
 
@@ -32,6 +36,7 @@
     font-family: "Avenir";
     src: url("/fonts/avenir/Avenir-Light.otf") format("opentype");
     font-weight: 300;
+    font-display: swap;
     font-style: normal;
 }
 
@@ -102,6 +107,10 @@
     .half-star {
         fill: #dfe4e7;
         stroke: none;
+    }
+
+    .luggage-active path {
+        stroke: var(--light-blue);
     }
 }
 
